--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇨🇳 中国-247.5KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 保加利亚-282.8KB/s(Youtube:不良林), server: 213.183.63.217, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇷🇺 俄罗斯联邦-251.4KB/s(Youtube:不良林), server: 213.183.53.214, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇨🇳 中国-4.28MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
+  - {name: 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林), server: 213.183.53.200, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林), server: 213.183.53.200, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇳🇱 荷兰-1.59MB/s(Youtube:不良林), server: 213.183.59.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林), server: 213.183.53.214, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
   - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 38.75.136.102, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.60MB/s(Youtube:不良林), server: 38.75.136.102, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-3.38MB/s(Youtube:不良林), server: 38.75.136.102, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 38.75.136.102, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林) 2, server: 38.75.136.102, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-247.5KB/s(Youtube:不良林)
-      - 保加利亚-282.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-251.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-247.5KB/s(Youtube:不良林)
-      - 保加利亚-282.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-251.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-247.5KB/s(Youtube:不良林)
-      - 保加利亚-282.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-251.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-247.5KB/s(Youtube:不良林)
-      - 保加利亚-282.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-251.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-247.5KB/s(Youtube:不良林)
-      - 保加利亚-282.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-251.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-247.5KB/s(Youtube:不良林)
-      - 保加利亚-282.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-251.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-247.5KB/s(Youtube:不良林)
-      - 保加利亚-282.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-251.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
