--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: 38.75.136.102, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇷🇺 俄罗斯联邦-177.4KB/s(Youtube:不良林), server: 213.183.53.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林), server: 213.183.53.214, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇷🇺 俄罗斯联邦-2.63MB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林), server: 213.183.53.200, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林), server: 213.183.53.208, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林), server: 213.183.53.200, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇷🇺 俄罗斯联邦-1009.7KB/s(Youtube:不良林), server: 213.183.53.212, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
   - {name: 🇺🇸 美国-3.38MB/s(Youtube:不良林), server: 38.75.136.102, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 38.75.136.102, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇳🇱 荷兰-550.5KB/s(Youtube:不良林), server: 213.183.59.229, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-177.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1009.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-550.5KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-177.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1009.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-550.5KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-177.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1009.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-550.5KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-177.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1009.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-550.5KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-177.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1009.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-550.5KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-177.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1009.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-550.5KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-177.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.96MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1009.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-550.5KB/s(Youtube:不良林)
