--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林), server: 213.183.53.200, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林), server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇸🇬 新加坡-222.4KB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林), server: 213.183.53.177, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
   - {name: 🇺🇸 美国-2.55MB/s(Youtube:不良林), server: 38.68.134.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: 38.75.136.102, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 38.75.136.102, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-236.6KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-4.50MB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-1.10MB/s(Youtube:不良林), server: 38.75.136.102, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇳🇱 荷兰-584.1KB/s(Youtube:不良林), server: 37.120.192.158, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇳🇱 荷兰-515.1KB/s(Youtube:不良林), server: 37.120.192.158, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇳🇱 荷兰-507.3KB/s(Youtube:不良林), server: 37.120.192.158, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-222.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-515.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-507.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-222.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-515.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-507.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-222.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-515.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-507.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-222.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-515.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-507.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-222.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-515.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-507.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-222.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-515.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-507.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.87MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-222.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-584.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-515.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-507.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
